--- a/public/index.html
+++ b/public/index.html
@@ -50,16 +50,14 @@
         <button id="lockButton">Lock It In</button>
     </div>
 
-    <div id="result" style="display: none">
-        <h2 id="resultLabel"></h2>
-        <div id="finalResults"></div>
-        <button id="nextButton">Next</button>
-    </div>
-
-    <div id="waitingForVotes" style="display: none">
+    <div id="waitingForVotes" style="display: none;">
         <h2>Waiting for Votes</h2>
         <p id="waitingVotesText"></p>
-        <p id="waitingVotesCount"></p>
+    </div>
+
+    <div id="result" style="display: none;">
+        <h2 id="resultLabel"></h2>
+        <ul id="finalResults"></ul>
     </div>
 </body>
 </html>
