--- a/public/index.html
+++ b/public/index.html
@@ -54,15 +54,17 @@
             <button id="lockButton">Lock It In</button>
         </div>
 
-        <div id="waitingForVotes" style="display: none">
-            <h2>Waiting for Votes</h2>
-            <p id="waitingVotesText"></p>
-        </div>
-
         <div id="result" style="display: none;">
             <h2 id="resultLabel"></h2>
             <table id="resultTable"></table>
             <button id="nextButton" style="display: none;">Next Ranking</button>
+            <button id="endGameButton" style="display: none;">End Game</button>
+        </div>
+
+        <div id="waitingForVotes" style="display: none">
+            <h2>Waiting for Votes</h2>
+            <p id="waitingVotesText"></p>
+            <button id="stopWaitingButton" style="display: none;">Stop Waiting</button>
         </div>
     </body>
 </html>
