--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <body>
         <div id="start">
             <h1>Force Rank</h1>
+            <p class="subheader">The Game That Breaks Up Friends and Family</p>
             <button id="createGameButton">Start Game</button>
             <button id="joinGameButton">Join Game</button>
         </div>
