--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
             <p class="subheader">The Game That Breaks Up Friends and Family</p>
             <button id="createGameButton">Start Game</button>
             <button id="joinGameButton">Join Game</button>
+            <button id="demoMarvelButton">Demo: Marvel</button>
+
         </div>
 
         <div id="createGame" style="display: none">
@@ -31,23 +33,28 @@
             <input
                 type="text"
                 id="gameCodeInput"
+                class="large-input"
                 placeholder="Enter game code"
             />
             <button id="joinGameSubmitButton">Join</button>
         </div>
 
-        <div id="waitingRoom" style="display: none">
+        <div id="waitingRoom" style="display: none;">
             <h2>Waiting Room</h2>
-            <p>Game Code: <span id="waitingRoomGameCode"></span></p>
-            <h3>Players:</h3>
+            <p>Game Code: <span id="waitingRoomGameCode"></span><button id="copyGameCodeButton" class="copy-button">Copy</button></p>
+            <h3>Players: <span id="playerCount">1 (including you)</span></h3>
             <ul id="playersList"></ul>
             <p id="lockCount"></p>
             <button id="startGameButton">Start Game</button>
-            <textarea id="invitationText" readonly></textarea>
+            <div class="invitation-container">
+                <textarea id="invitationText" readonly></textarea>
+                <button id="copyInvitationButton" class="copy-button">Copy</button>
+            </div>
         </div>
 
         <div id="game" style="display: none">
             <h2 id="rankingLabel"></h2>
+            <p class="subheader">Drag the names to rank them</p>
             <div id="rankingContainer">
                 <div id="rankNumbers"></div>
                 <ul id="sortable"></ul>
@@ -60,12 +67,21 @@
             <table id="resultTable"></table>
             <button id="nextButton" style="display: none;">Next Ranking</button>
             <button id="endGameButton" style="display: none;">End Game</button>
+            <button id="backToVotingButton" style="display: none;">Back to Voting</button>
+            <button id="backToStartButton" style="display: none;">Next Ranking</button>
+
+
+
         </div>
 
         <div id="waitingForVotes" style="display: none">
             <h2>Waiting for Votes</h2>
             <p id="waitingVotesText"></p>
             <button id="stopWaitingButton" style="display: none;">Stop Waiting</button>
+        </div>
+
+        <div id="quitButtonContainer" style="position: fixed; bottom: 10px; right: 10px;">
+            <a id="quitLink" href="#" style="position: fixed; bottom: 10px; right: 10px; font-size: 0.8em;">Quit</a>
         </div>
     </body>
 </html>
